--- a/css/style.css
+++ b/css/style.css
@@ -340,13 +340,7 @@ html{
     padding-bottom: 5rem;
 }
 
-.box {
-    opacity: 0;
-    filter: blur(5px);
-    transform: translateX(-100%);
-    transition: all 1s;
-}
-
+/* move right */
 .box {
     opacity: 0;
     filter: blur(5px);
@@ -358,7 +352,49 @@ html{
     opacity: 1;
     filter: blur(0);
     transform: translateX(0%);
+}
+
+/* fall down */
+.box2 {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateY(-50%);
+    transition: all 1s;
+}
+
+.show2 {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateY(0%);
 } 
+
+/* enlarge */
+.box3 {
+    opacity: 0;
+    filter: blur(5px);
+    transform: scale(0.5);
+    transition: all 1s;
+}
+
+.show3 {
+    opacity: 1;
+    filter: blur(0);
+    transform: scale(1);
+} 
+
+/* move left */
+.box4 {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(10%);
+    transition: all 1s;
+}
+
+.show4 {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0%);
+}
 /* 
 
 .box:hover{
